--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,12 @@
 click==7.1.2
 Flask==1.1.2
+Flask-Cors==3.0.10
 gunicorn==20.0.4
 itsdangerous==1.1.0
 Jinja2==2.11.3
 MarkupSafe==1.1.1
 Werkzeug==1.0.1
+PyMongo==3.12.0
+certifi==2021.5.30
+vobject==0.9.6.1
+bson==0.5.10
